--- a/css/style.css
+++ b/css/style.css
@@ -124,19 +124,20 @@ button:hover{
 }
 /*Reglas h1 de INFO*/
 .info h1{
-    font-size: 4em;
+    font-size: 3.5em;
     color: #5b3c6f;
 }
 /*Reglas de párrafo*/
 p{
-    font-size: 18px;
-    margin: 20px;
+    font-size: 16px;
+    margin: 10px 40px;
+    text-align: justify;
     color: #7e5f9e;
 }
 /*Reglas de span de párrafo*/
 p span{
     font-weight: bold;
-    color: #5b3c6f;
+    color: #f8a4d9;;
 }
 /*Reglas de footer*/
 footer{
@@ -157,7 +158,7 @@ footer p {
     animation: movimiento 20s linear infinite; /*animación para que el texto vaya hacia la izquiera de manera infinita*/
 }
 footer p span{
-    color: #5b3c6f;
+    color: #f8a4d9;
 }
 
 
@@ -179,7 +180,7 @@ h1.on, h2.on {
     color: #f0a6ca;
 }
 p.on {
-    color: #b3a1d1;
+    color: #d4c0f3;
 }
 nav ul li a.on {
     color: #e6c7f7;
