--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,7 @@ body{
 /*Reglas del contenedor*/
 .contenedor{
     width: 95%; /*para que sea más pequeño que el body*/
-    height: calc(100vh - 10%); /*defino una altura para el contenedor*/
+    height: calc(100vh - 4%); /*defino una altura para el contenedor*/
     background-color: rgba(245, 245, 245, 0.8);
     border-radius: 5px;
     position: relative; /*es necesario poner position relative para que sirva como referencia*/
@@ -243,6 +243,7 @@ footer.on{
 /*Reglas del párrafo: lo situo con position absolute sacándolo del flujo*/
 .contenido p{
     margin-top: 10px;
+    margin-bottom: 25px;
     text-align: center;
 }
 /*Reglas del contenedor de Ana (.uno) y Laura (.dos)*/
@@ -259,7 +260,10 @@ footer.on{
 }
 .uno p, .dos p{
     font-size: 14px;
-    margin: 5px 40px;
+    margin: 10px 40px;
+}
+.bio p{
+    text-align: center;
 }
 /*Reglas para los enlaces*/
 .enlaces{
@@ -277,11 +281,11 @@ footer.on{
 /*Flecha para volver*/
 .flecha{
     position: absolute;
-    top: 65px;
+    top: 50px;
     left: 10px;
     background-color: transparent;  /* Sin fondo */
     color: #8e44ad;  /* Color morado para la flecha */
-    font-size: 30px;  /* Tamaño grande para la flecha */
+    font-size: 40px;  /* Tamaño grande para la flecha */
     padding: 10px 15px;  /* Espaciado adecuado */
     border: none;  /* Sin borde */
     cursor: pointer;
@@ -289,6 +293,71 @@ footer.on{
 }
 .flecha:hover{
     scale: 1.1;
+}
+
+/*-----------------------------------------------------------------------------*/
+/*PÁGINA GENERADOR*/
+/*Reglas para la sección generador*/
+.generador{
+    width: 100%;
+    height: calc(100% - 125px);
+    margin: 0 auto; 
+    text-align: center;
+}
+.generador h1{
+    margin-top: 20px;
+    margin-bottom: 15px;
+    color: #5d3a9f;
+    font-size: 3em;
+}
+.generador p{
+    color: #6a4c9c; 
+    margin-bottom: 25px;
+    text-align: center;
+}
+/*Reglas para el input tipo text*/
+.generador form input[type="text"]{
+    width: 80%;
+    padding: 12px;
+    font-size: 1em; 
+    border: 1px solid #b497d6; 
+    border-radius: 5px;
+    margin-bottom: 15px;
+}
+/*Reglas para los botones*/
+.generador .botones {
+    display: flex;
+    justify-content: center;
+    gap: 20px; 
+    margin-bottom: 10px;
+}
+.generador .botones input[type="submit"],
+.generador .botones input[type="button"]{
+    padding: 10px;
+    font-size: 1em;
+    font-family: "Lekton", sans-serif; 
+    background-color: #a992ca; 
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: transform 0.2s ease-in-out, font-weight 0.3s;
+}
+.generador .botones input[type="submit"]:hover,
+.generador .botones input[type="button"]:hover{
+    scale: 1.2; 
+    font-weight: bold;
+}
+.generador .botones .generate:hover{
+    background-color: #8f75b1; 
+}
+.generador .botones .add:hover{
+    background-color: #84619c; 
+}
+.generador .resultado {
+    margin-top: 20px;
+    font-size: 1.5em;
+    color: #6a4c9c; 
 }
 
 
@@ -354,6 +423,7 @@ footer.on{
     p{
         font-size: 16px;
     }
+
 }
 /*Para pantallas menores a 767px*/
 @media (max-width: 767px) {
@@ -413,6 +483,31 @@ footer.on{
     p{
         font-size: 14px;
     }
+    /*PÁGINA NOSOTRAS*/
+    .contenido, .uno, .dos{
+        height: calc(100% - 190px);
+    }
+    .uno p, .dos p{
+        font-size: 12px;
+        margin: 10px 40px;
+    }
+    .uno img, .dos img{
+        width: 100px; 
+        height: auto;
+    }
+    .enlaces img{
+        width: 30px;   
+        height: 30px;   
+    }
+    .perfiles{
+        flex-direction: column;
+    }
+    .perfiles img{
+        width: 200px; 
+    }
+    .flecha{
+        top: 115px;
+    }
 }
 @media (max-width: 660px) {
     .titulo img{
@@ -422,5 +517,14 @@ footer.on{
     h1{
         font-size: 3.5em;
         padding: 10px;
+    }
+    footer{
+        font-size: 1em;
+    }
+    .perfiles{
+        flex-direction: column;
+    }
+    .perfiles img{
+        width: 150px; 
     }
 }
